fix checkout